# UserInput

./: CMakeLists.txt  main.cpp
src/: UserInputClass.cpp  UserInputClass.h
